add treats and flavors views

--- a/PierresTreats/Views/Shared/FlavorCard.cshtml
+++ b/PierresTreats/Views/Shared/FlavorCard.cshtml
@@ -1,5 +1,5 @@
-@using Factory.Models;
-@model Factory.Models.Flavor;
+@using PierresTreats.Models;
+@model PierresTreats.Models.Flavor;
 
 <section class="card mb-3">
   <div class="card-header">
