--- a/PierresTreats/Views/Shared/FlavorList.cshtml
+++ b/PierresTreats/Views/Shared/FlavorList.cshtml
@@ -1,5 +1,5 @@
-@using Factory.Models;
-@model Factory.Models.Treat;
+@using PierresTreats.Models;
+@model PierresTreats.Models.Treat;
 
 @if (Model.Flavors.Count == 0)
 {
