--- a/PierresTreats/Views/Shared/TreatCard.cshtml
+++ b/PierresTreats/Views/Shared/TreatCard.cshtml
@@ -1,5 +1,5 @@
-@using Factory.Models;
-@model Factory.Models.Treat;
+@using PierresTreats.Models;
+@model PierresTreats.Models.Treat;
 
 <section class="card mb-3">
   <div class="card-header">
