--- a/PierresTreats/Views/Shared/NavBar.cshtml
+++ b/PierresTreats/Views/Shared/NavBar.cshtml
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/flavors">Flavors</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/account">Account</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/" method="post">
       <select name="searchOption" id="searchOption" class="form-control mr-sm-2">
