--- a/PierresTreats/Views/Shared/TreatList.cshtml
+++ b/PierresTreats/Views/Shared/TreatList.cshtml
@@ -1,5 +1,5 @@
 @using PierresTreats.Models;
-@model PierresTreats.Models.Treat;
+@model PierresTreats.Models.Flavor;
 
 @if (Model.Treats.Count == 0)
 {
