--- a/PierresTreats/Views/Flavors/Index.cshtml
+++ b/PierresTreats/Views/Flavors/Index.cshtml
@@ -13,7 +13,7 @@ else if (Model.Count() == 0 && ViewBag.SearchFlag == 1)
 {
   <p>Your search returned no results.</p>
 }
-<form action="/engineers/create" method="get">
+<form action="/flavors/create" method="get">
   <button type="submit" class="btn btn-primary mb-3">Add New Flavor</button>
 </form>
 @foreach (Flavor flavor in Model)
@@ -21,7 +21,7 @@ else if (Model.Count() == 0 && ViewBag.SearchFlag == 1)
   <div class="card mb-3">
     <div class="card-body list">
       <div class="list-text mt-1">
-        <i class="fas fa-user-cog mr-1"></i>
+        <i class="far fa-smile mr-1"></i>
         @Html.ActionLink($"{flavor.Name}", "Details", "Flavors", new { id = flavor.FlavorId })
       </div>
       <div class="list-button">
