--- a/PierresTreats/Views/Shared/FlavorList.cshtml
+++ b/PierresTreats/Views/Shared/FlavorList.cshtml
@@ -10,7 +10,7 @@
   <div class="card mb-3">
     <div class="card-body list">
       <div class="list-text mt-1">
-        <i class="fas fa-user-cog mr-1"></i>
+        <i class="far fa-smile mr-1"></i>
         @Html.ActionLink($"{join.Flavor.Name}", "Details", "Flavors", new { id = join.Flavor.FlavorId })
       </div>
       <div class="list-button">
