--- a/PierresTreats/Views/Shared/TreatList.cshtml
+++ b/PierresTreats/Views/Shared/TreatList.cshtml
@@ -10,7 +10,7 @@
   <div class="card mb-3">
     <div class="card-body list">
       <div class="list-text mt-1">
-        <i class="fas fa-user-cog mr-1"></i>
+        <i class="fas fa-birthday-cake mr-1"></i>
         @Html.ActionLink($"{join.Treat.Name}", "Details", "Treats", new { id = join.Treat.TreatId })
       </div>
       <div class="list-button">
