--- a/PierresTreats/Views/Treats/Create.cshtml
+++ b/PierresTreats/Views/Treats/Create.cshtml
@@ -14,7 +14,7 @@
       {
         @Html.LabelFor(model => model.Name)
         @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-        <input type="submit" value="Add new flavor" class="btn btn-primary mt-3" />
+        <input type="submit" value="Add new treat" class="btn btn-primary mt-3" />
       }
     </div>
   </div>
