--- a/PierresTreats/Views/Treats/Index.cshtml
+++ b/PierresTreats/Views/Treats/Index.cshtml
@@ -13,7 +13,7 @@ else if (Model.Count() == 0 && ViewBag.SearchFlag == 1)
 {
   <p>Your search returned no results.</p>
 }
-<form action="/engineers/create" method="get">
+<form action="/treats/create" method="get">
   <button type="submit" class="btn btn-primary mb-3">Add New Treat</button>
 </form>
 @foreach (Treat treat in Model)
@@ -21,7 +21,7 @@ else if (Model.Count() == 0 && ViewBag.SearchFlag == 1)
   <div class="card mb-3">
     <div class="card-body list">
       <div class="list-text mt-1">
-        <i class="fas fa-user-cog mr-1"></i>
+        <i class="fas fa-birthday-cake mr-1"></i>
         @Html.ActionLink($"{treat.Name}", "Details", "Treats", new { id = treat.TreatId })
       </div>
       <div class="list-button">
