add functionality to hide interface buttons if user is not logged in

--- a/PierresTreats/Views/Home/Index.cshtml
+++ b/PierresTreats/Views/Home/Index.cshtml
@@ -8,12 +8,26 @@
     </div>
     <div class="card-body">
       <h5 class="card-title">Welcome to Pierre's Sweet and Savory Treats</h5>
-      <p>Select an option from the navigation bar to browse the site or add a flavor or treat to get started.</p>
-      <form action="/flavors/create" method="get" class="home-form">
-        <button type="submit" class="btn btn-primary">Add New Flavor</button>
-      </form>
-      <form action="/treats/create" method="get" class="home-form">
-        <button type="submit" class="btn btn-primary">Add New Treat</button>
-      </form>
+      <p>Select an option from the navigation bar to browse the site.</p>
+      @if (User.Identity.IsAuthenticated)
+      {
+        <form action="/flavors/create" method="get" class="home-form">
+          <button type="submit" class="btn btn-primary">Add New Flavor</button>
+        </form>
+        <form action="/treats/create" method="get" class="home-form">
+          <button type="submit" class="btn btn-primary">Add New Treat</button>
+        </form>
+      }
+      else
+      {
+        @using (Html.BeginForm("Login", "Account", FormMethod.Get))
+        {
+          <button type="submit" class="btn btn-success mb-3">Log In</button>
+        }
+        @using (Html.BeginForm("Register", "Account", FormMethod.Get))
+        {
+          <button type="submit" class="btn btn-primary">Register</button>
+        }
+      }
     </div>
   </section>  
