--- a/PierresTreats/Views/Flavors/Index.cshtml
+++ b/PierresTreats/Views/Flavors/Index.cshtml
@@ -5,6 +5,8 @@
 @using PierresTreats.Models;
 @model IEnumerable<PierresTreats.Models.Flavor>;
 
+<h2>Flavors</h2>
+
 @if (Model.Count() == 0 && ViewBag.SearchFlag == 0)
 {
   <p>There are no flavors to display, please add a flavor.</p>
@@ -13,9 +15,12 @@ else if (Model.Count() == 0 && ViewBag.SearchFlag == 1)
 {
   <p>Your search returned no results.</p>
 }
-<form action="/flavors/create" method="get">
-  <button type="submit" class="btn btn-primary mb-3">Add New Flavor</button>
-</form>
+@if (User.Identity.IsAuthenticated)
+{
+  <form action="/flavors/create" method="get">
+    <button type="submit" class="btn btn-primary mb-3">Add New Flavor</button>
+  </form>
+}
 @foreach (Flavor flavor in Model)
 {
   <div class="card mb-3">
@@ -24,12 +29,15 @@ else if (Model.Count() == 0 && ViewBag.SearchFlag == 1)
         <i class="far fa-smile mr-1"></i>
         @Html.ActionLink($"{flavor.Name}", "Details", "Flavors", new { id = flavor.FlavorId })
       </div>
-      <div class="list-button">
-        @using (Html.BeginForm("Delete", "Flavor", new {id = flavor.FlavorId }))
-        {
-          <button type="submit" class="btn btn-danger mr-3"><i class="fas fa-times"></i></button>
-        }
-      </div>
+      @if (User.Identity.IsAuthenticated)
+      {
+        <div class="list-button">
+          @using (Html.BeginForm("Delete", "Flavors", new {id = flavor.FlavorId }))
+          {
+            <button type="submit" class="btn btn-danger mr-3"><i class="fas fa-times"></i></button>
+          }
+        </div>
+      }
     </div>
   </div>
 }
