--- a/PierresTreats/Views/Shared/FlavorList.cshtml
+++ b/PierresTreats/Views/Shared/FlavorList.cshtml
@@ -13,12 +13,15 @@
         <i class="far fa-smile mr-1"></i>
         @Html.ActionLink($"{join.Flavor.Name}", "Details", "Flavors", new { id = join.Flavor.FlavorId })
       </div>
-      <div class="list-button">
-        @using (Html.BeginForm("RemoveFlavor", "Treats", new {FlavorId = join.Flavor.FlavorId, TreatId = join.Treat.TreatId }))
-        {
-          <button type="submit" class="btn btn-danger mr-3"><i class="fas fa-times"></i></button>
-        }
-      </div>
+      @if (User.Identity.IsAuthenticated)
+      {
+        <div class="list-button">
+          @using (Html.BeginForm("RemoveFlavor", "Treats", new {FlavorId = join.Flavor.FlavorId, TreatId = join.Treat.TreatId }))
+          {
+            <button type="submit" class="btn btn-danger mr-3"><i class="fas fa-times"></i></button>
+          }
+        </div>
+      }
     </div>
   </div>
 }
