--- a/PierresTreats/Views/Shared/NavBar.cshtml
+++ b/PierresTreats/Views/Shared/NavBar.cshtml
@@ -25,13 +25,13 @@
         <option value="flavors">Search Flavors</option>
       </select>
       <input class="form-control mr-sm-2" name="searchString" id="searchString" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-outline-success my-2 my-sm-0 mr-3" type="submit">Search</button>
     </form>
     @if (User.Identity.IsAuthenticated)
       {
         @using (Html.BeginForm("LogOff", "Account"))
         {
-          <div class="ml-3">Current User: @User.Identity.Name <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log Out</button></div>
+          <div>@User.Identity.Name <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log Out</button></div>
         }
       }
   </div>
