--- a/PierresTreats/Views/Shared/TreatList.cshtml
+++ b/PierresTreats/Views/Shared/TreatList.cshtml
@@ -13,12 +13,15 @@
         <i class="fas fa-birthday-cake mr-1"></i>
         @Html.ActionLink($"{join.Treat.Name}", "Details", "Treats", new { id = join.Treat.TreatId })
       </div>
-      <div class="list-button">
-        @using (Html.BeginForm("RemoveTreat", "Flavors", new {TreatId = join.Treat.TreatId, FlavorId = join.Flavor.FlavorId }))
-        {
-          <button type="submit" class="btn btn-danger mr-3"><i class="fas fa-times"></i></button>
-        }
-      </div>
+      @if (User.Identity.IsAuthenticated)
+      {
+        <div class="list-button">
+          @using (Html.BeginForm("RemoveTreat", "Flavors", new {TreatId = join.Treat.TreatId, FlavorId = join.Flavor.FlavorId }))
+          {
+            <button type="submit" class="btn btn-danger mr-3"><i class="fas fa-times"></i></button>
+          }
+        </div>
+      }
     </div>
   </div>
 }
