--- a/PierresTreats/Views/Treats/Index.cshtml
+++ b/PierresTreats/Views/Treats/Index.cshtml
@@ -5,6 +5,8 @@
 @using PierresTreats.Models;
 @model IEnumerable<PierresTreats.Models.Treat>;
 
+<h2>Treats</h2>
+
 @if (Model.Count() == 0 && ViewBag.SearchFlag == 0)
 {
   <p>There are no treats to display, please add a treat.</p>
@@ -13,9 +15,12 @@ else if (Model.Count() == 0 && ViewBag.SearchFlag == 1)
 {
   <p>Your search returned no results.</p>
 }
-<form action="/treats/create" method="get">
-  <button type="submit" class="btn btn-primary mb-3">Add New Treat</button>
-</form>
+@if (User.Identity.IsAuthenticated)
+{
+  <form action="/treats/create" method="get">
+    <button type="submit" class="btn btn-primary mb-3">Add New Treat</button>
+  </form>
+}
 @foreach (Treat treat in Model)
 {
   <div class="card mb-3">
@@ -24,12 +29,15 @@ else if (Model.Count() == 0 && ViewBag.SearchFlag == 1)
         <i class="fas fa-birthday-cake mr-1"></i>
         @Html.ActionLink($"{treat.Name}", "Details", "Treats", new { id = treat.TreatId })
       </div>
-      <div class="list-button">
-        @using (Html.BeginForm("Delete", "Treat", new {id = treat.TreatId }))
-        {
-          <button type="submit" class="btn btn-danger mr-3"><i class="fas fa-times"></i></button>
-        }
-      </div>
+      @if (User.Identity.IsAuthenticated)
+      {
+        <div class="list-button">
+          @using (Html.BeginForm("Delete", "Treats", new {id = treat.TreatId }))
+          {
+            <button type="submit" class="btn btn-danger mr-3"><i class="fas fa-times"></i></button>
+          }
+        </div>
+      }
     </div>
   </div>
 }
